# cpp-toolkit

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
cmake/: common_var.cmake  compiler.cmake  external_lib.cmake  helper.cmake
code_to_gen/protos/: cpt_im.proto
extra/: conanfile.txt  libp2p.conanfile.py
extra/cmake/: compiler.cmake
include/: program_main.h
include/app_asio_socket/: app_asio_socket.h
include/app_chat/: app_chat.hpp
include/app_coroutine/: app_coroutine.h
include/app_im/: app_im.h  app_im.hpp  thing.h  work.h  worker.h
include/app_kad_mac/: app_kad_mac.h
include/app_kademlia/: rendezvous_chat.h
include/app_perf_test/: app_perf_test.h  app_perf_test.hpp
include/app_prod_im/: app_prod_im.h  app_prod_im.hpp
include/app_socket/: app_socket.h
include/app_test_udp/: app_test_udp.hpp
include/app_worker/: app_worker.h  app_worker.hpp
include/mod_common/: expect.h  log.h  os_compat.h  queue.h  timeout.h  utils.h  utils.hpp
include/mod_consensus/: mod_consensus.h  mod_consensus.hpp
include/mod_consensus_net/: mod_consensus_net.h
include/mod_coroutine/: mod_co_mutex.hpp  mod_co_net.h  mod_co_timer.h  mod_cor.hpp  mod_cor_channel.hpp  mod_cor_impl.hpp  mod_cor_net.h  mod_cor_net.hpp  mod_cor_timer.h  mod_coroutine.h
include/mod_flow_switch/: mod_flow_switch.h  mod_flow_switch.hpp
include/mod_hash_chain/: mod_hash_chain.h  mod_hash_chain.hpp
include/mod_hash_table/: mod_hash_table.h  mod_hash_table.hpp
include/mod_mempool/: mod_mempool.h
include/mod_netlib/: mod_netlib.h  mod_netlib.hpp  mod_netlib_tcp.h  mod_netlib_tcp.hpp
include/mod_np_queue/: mod_np_queue.hpp
include/mod_p2p_net/: mod_p2p_net.h  mod_p2p_net.hpp
include/mod_queue/: mod_queue.h  mod_queue.hpp
include/mod_ring_queue/: mod_ring_queue.h  mod_ring_queue.hpp
include/mod_socket/: mod_socket.h
include/mod_tcp_hole_punching/: mod_tcp_hole_punching.h  mod_tcp_hole_punching.hpp
include/mod_time_wheel/: mod_time_wheel.hpp
include/mod_timeout_table/: mod_timeout_table.h
include/mod_worker/: mod_work.h  mod_work.hpp  mod_worker.h  mod_worker.hpp  mod_worker_epoll.h  mod_worker_netio.h  mod_worker_netio.hpp  mod_workutils.h  mod_workutils.hpp
include/soralog/: event.hpp
src/: program_main.cpp
src/app_asio_socket/: app_asio_socket.cpp  app_asio_socket_client.cpp  app_asio_socket_client.h  app_asio_socket_client.hpp  app_asio_socket_server.cpp  app_asio_socket_server.h  app_asio_socket_server.hpp
src/app_chat/: app_chat.cpp  app_chat_client.cpp  app_chat_client.h  app_chat_client.hpp  app_chat_message.h  app_chat_message.hpp  app_chat_server.cpp  app_chat_server.h  app_chat_server.hpp
src/app_coroutine/: app_coroutine.cpp  io_context_pool.cpp  io_context_pool.h
src/app_grpc_hw/: greeter_client.cpp  greeter_server.cpp
src/app_im/: app_im.cpp  app_im_client.cpp  app_im_client.h  app_im_client.hpp  app_im_server.cpp  app_im_server.h  app_im_server.hpp  thing.cpp  work.cpp  worker.cpp
src/app_kad_mac/: app_kad_mac.cpp
src/app_kademlia/: rendezvous_chat.cpp
src/app_perf_test/: app_perf_test.cpp  app_perf_test.h  app_perf_test_internal.h  app_perf_test_internal.hpp  perf_callcc.cpp  perf_fcontext.cpp  perf_fiber.cpp
src/app_prod_im/: README.md  app_prod_im.cpp  app_prod_im_dt.h  app_prod_im_internal.h  app_prod_im_internal.hpp  prod_im_client.cpp  prod_im_client.hpp  prod_im_client_chat_msg_receiving.cpp  prod_im_client_chat_msg_sending.cpp  prod_im_client_contacts.cpp  prod_im_client_login_session.cpp  prod_im_client_mod_api_grpc.cpp  prod_im_client_mod_api_grpc.hpp  prod_im_client_mod_chat_msg_receiving.cpp  prod_im_client_mod_chat_msg_sending.cpp  prod_im_client_mod_cli.cpp  prod_im_client_mod_cli.hpp  prod_im_client_mod_contacts.cpp  prod_im_client_mod_contacts.hpp  prod_im_client_mod_grpc_api.cpp  prod_im_client_mod_grpc_api.hpp  prod_im_client_mod_login_session.cpp  prod_im_client_mod_main.cpp  prod_im_client_mod_main.hpp  prod_im_dt.h  prod_im_dt.hpp  prod_im_helper.cpp  prod_im_helper.h  prod_im_helper.hpp  prod_im_server.cpp  prod_im_server.hpp  prod_im_server_chat_msg_receiving.cpp  prod_im_server_chat_msg_relay.cpp  prod_im_server_mod_api_grpc.cpp  prod_im_server_mod_api_grpc.hpp  prod_im_server_mod_api_jsonrpc.cpp  prod_im_server_mod_api_jsonrpc.hpp  prod_im_server_mod_chat_msg_receiving.cpp  prod_im_server_mod_chat_msg_relay.cpp  prod_im_server_mod_grpc_api.cpp  (+11 more)
src/app_socket/: app_socket.cpp
src/app_test_http_client/: app_test_http_client.cpp
src/app_test_udp/: app_test_udp.cpp
src/app_worker/: app_worker.cpp
src/exec_main/: CMakeLists.txt  exec_main.cpp
src/exec_prod_im/: CMakeLists.txt  exec_main.cpp
src/exec_test/: CMakeLists.txt  exec_test.cpp
src/exec_test_ftxui/: CMakeLists.txt  exec_test_ftxui.cpp
src/exec_test_http_client/: CMakeLists.txt
src/exec_test_qt/: CMakeLists.txt  exec_main.cpp
src/mod_common/: os_compat.cpp  timeout-bitops.c  timeout.c  utils.cpp
src/mod_consensus/: mod_consensus.cpp
src/mod_consensus_net/: mod_consensus_net.cpp
src/mod_coroutine/: mod_co_mutex.cpp  mod_co_net.cpp  mod_cor.cpp  mod_cor_mutex.cpp  mod_cor_net.cpp  mod_coroutine.cpp
src/mod_flow_switch/: mod_flow_switch.cpp
src/mod_hash_chain/: mod_hash_chain.cpp
src/mod_hash_table/: mod_hash_table.cpp
src/mod_kademlia/: find_peer_executor.cpp  find_providers_executor.cpp  get_value_executor.cpp
src/mod_mempool/: mod_mempool.cpp
src/mod_netlib/: mod_netlib.cpp
src/mod_np_queue/: mod_np_queue.cpp
src/mod_p2p_net/: mod_p2p_net.cpp
src/mod_queue/: mod_queue.cpp
src/mod_ring_queue/: mod_ring_queue.cpp
src/mod_socket/: mod_socket.cpp
src/mod_tcp_hole_punching/: mod_tcp_hole_punching.cpp
src/mod_time_wheel/: mod_time_wheel.cpp
src/mod_timeout_table/: mod_timeout_table.cpp
src/mod_worker/: mod_work.cpp  mod_worker.cpp  mod_worker_epoll.cpp  mod_worker_netio.cpp  mod_workutils.cpp
z_other/: conanfile.txt  conanfile_linux.txt  conanfile_win.txt
z_other/cmake/: compiler.cmake  external_lib.cmake  helper.cmake
z_other/doc/: IM_Design.md
(+75 files in other folders)
